# cppcon2020

./: .clang-format  .clang_format  .gitignore  .travis.yaml  CMakeLists.txt  README.md
.github/workflows/: Linux.yml  linux-x64.yml  windows-x64.yml
include/mylib/: data_base.hxx  internals.hxx  placeholder.hxx
src/: CMakeLists.txt  data_base.cxx  sql_processor.cxx  sql_processor.hxx
tests/: CMakeLists.txt  main.cxx
